--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@wordpress/element": "^5.35.0",
     "@wordpress/icons": "^9.49.0",
     "axios": "^1.7.9",
+    "font-awesome": "4.7.0",
     "normalize.css": "^8.0.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
