--- a/.gitignore
+++ b/.gitignore
@@ -124,3 +124,4 @@ src/.htaccess
 /.ddev/commands/host/
 /.ddev/docker-*
 /wp-content/themes/twentytwentyfour/
+/wp-content/themes/twentytwentyfive/
