--- a/wp-content/themes/ourblocktheme/package.json
+++ b/wp-content/themes/ourblocktheme/package.json
@@ -34,6 +34,7 @@
 		"@wordpress/block-editor": "^14.12.0",
 		"@wordpress/blocks": "^14.6.0",
 		"@wordpress/components": "^24.0.0",
-		"@wordpress/scripts": "^30.10.0"
+    "@wordpress/scripts": "^30.10.0",
+    "webpack-cli": "^6.0.1"
 	}
 }
