--- a/wp-content/themes/ourblocktheme/package.json
+++ b/wp-content/themes/ourblocktheme/package.json
@@ -6,6 +6,7 @@
 	"scripts": {
 		"build": "wp-scripts build",
 		"start": "wp-scripts start src/index.js blocks/banner/banner.js blocks/genericheading/genericheading.js blocks/genericbutton/genericbutton.js blocks/slideshow/slideshow.js blocks/slide/slide.js",
+    "blocks": "wp-scripts start --experimental-modules",
 		"dev": "wp-scripts start",
 		"devFast": "wp-scripts start",
 		"format": "wp-scripts format",
