--- a/wp-content/themes/ourblocktheme/package.json
+++ b/wp-content/themes/ourblocktheme/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"build": "wp-scripts build",
-		"start": "wp-scripts start src/index.js blocks/genericheading/genericheading.js blocks/genericbutton/genericbutton.js blocks/slideshow/slideshow.js blocks/slide/slide.js",
+		"start": "wp-scripts start src/index.js blocks/genericheading/genericheading.js blocks/genericbutton/genericbutton.js blocks/slideshow/slideshow.js",
 		"blocks": "wp-scripts start --experimental-modules",
 		"dev": "wp-scripts start",
 		"devFast": "wp-scripts start",
