--- a/package.json
+++ b/package.json
@@ -16,24 +16,21 @@
   "dependencies": {
     "@glidejs/glide": "^3.7.1",
     "@playwright/test": "^1.0.0",
-    "@wordpress/block-editor": "^14.12.0",
-    "@wordpress/blocks": "^14.6.0",
-    "@wordpress/components": "^24.0.0",
-    "@wordpress/element": "^5.35.0",
+    "@wordpress/element": "^6.23.0",
     "@wordpress/i18n": "^5.23.0",
-    "@wordpress/icons": "^9.49.0",
+    "@wordpress/icons": "^10.23.0",
     "axios": "^1.7.9",
     "font-awesome": "4.7.0",
     "normalize.css": "^8.0.1",
     "npm-run-all": "^4.1.5",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "semver": "^7.7.2"
   },
   "devDependencies": {
-    "@wordpress/block-editor": "^14.12.0",
-    "@wordpress/blocks": "^14.6.0",
-    "@wordpress/components": "^24.0.0",
+    "@wordpress/block-editor": "^14.18.0",
+    "@wordpress/blocks": "^14.12.0",
+    "@wordpress/components": "^29.9.0",
     "@wordpress/scripts": "^30.16.0",
     "webpack": "^5.98.0"
   }
