--- a/wp-content/themes/ourblocktheme/package.json
+++ b/wp-content/themes/ourblocktheme/package.json
@@ -12,6 +12,7 @@
 		"format": "wp-scripts format",
 		"lint:css": "wp-scripts lint-style",
 		"lint:js": "wp-scripts lint-js",
+		"packages-update": "wp-scripts packages-update",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"keywords": [
@@ -23,11 +24,8 @@
 	"dependencies": {
 		"@glidejs/glide": "^3.7.1",
 		"@playwright/test": "^1.0.0",
-		"@wordpress/block-editor": "^14.12.0",
-		"@wordpress/blocks": "^14.6.0",
-		"@wordpress/components": "^24.0.0",
-		"@wordpress/element": "^5.35.0",
-		"@wordpress/icons": "^9.49.0",
+		"@wordpress/element": "^6.23.0",
+		"@wordpress/icons": "^10.23.0",
 		"axios": "^1.7.9",
 		"font-awesome": "4.7.0",
 		"normalize.css": "^8.0.1",
@@ -36,10 +34,10 @@
 		"react-dom": "^18.0.0"
 	},
 	"devDependencies": {
-		"@wordpress/block-editor": "^14.12.0",
-		"@wordpress/blocks": "^14.6.0",
-		"@wordpress/components": "^24.0.0",
-		"@wordpress/scripts": "^30.10.0",
+		"@wordpress/block-editor": "^14.18.0",
+		"@wordpress/blocks": "^14.12.0",
+		"@wordpress/components": "^29.9.0",
+		"@wordpress/scripts": "^30.16.0",
 		"webpack-cli": "^6.0.1"
 	}
 }
